# poetry_to_uv

./: Makefile  README.md  pyproject.toml
.github/workflows/: python-publish.yml  python-test-publish.yml
src/poetry_to_uv/: __main__.py  constants.py  convertor.py  poetry.py  typing.py  validation.py
