[project]
name = "poetry-to-uv"
version = "0.0.3"
description = "Help make the migration from using a Poetry pyproject.toml file to a UV compatible pyproject.toml file."
requires-python = ">=3.7"
readme = "README.md"
dependencies = [
    "tomlkit",
    "pydantic",
    "packaging",
]


[project.optional-dependencies]
testing = [
    "pdbpp",
    "ruff",
    "mypy",
]

[project.scripts]
poetry_to_uv = "poetry_to_uv.__main__:cli_entrypoint"


[tool.ruff]
src = ["src"]

lint.select = [
    "A",      # flake8-builtins - https://beta.ruff.rs/docs/rules/#flake8-builtins-a
    "ASYNC",  # flake8-async - https://beta.ruff.rs/docs/rules/#flake8-async-async
    "B",      # flake8-bugbear - https://beta.ruff.rs/docs/rules/#flake8-bugbear-b
    "C",      # flake8-comprehensions (C4) / mccabe (C90) - https://beta.ruff.rs/docs/rules/#flake8-comprehensions-c4 / https://beta.ruff.rs/docs/rules/#mccabe-c90
    "D",      # pydocstyle - https://beta.ruff.rs/docs/rules/#pydocstyle-d
    "E",      # pycodestyle - https://beta.ruff.rs/docs/rules/#error-e
    "F",      # Pyflakes - https://beta.ruff.rs/docs/rules/#pyflakes-f
    "G",      # flake8-logging-format - https://beta.ruff.rs/docs/rules/#flake8-logging-format-g
    "I",      # isort - https://beta.ruff.rs/docs/rules/#isort-i
    "N",      # pep8-naming - https://beta.ruff.rs/docs/rules/#pep8-naming-n
    "Q",      # flake8-quotes - https://beta.ruff.rs/docs/rules/#flake8-quotes-q
    "T",      # flake8-debugger (T10) / flake8-print (T20) - https://beta.ruff.rs/docs/rules/#flake8-debugger-t10 / https://beta.ruff.rs/docs/rules/#flake8-print-t20
    # "UP",   # pyupgrade - https://beta.ruff.rs/docs/rules/#pyupgrade-up
    "W",      # pycodestyle - https://beta.ruff.rs/docs/rules/#warning-w
    "YTT",    # flake8-2020 - https://beta.ruff.rs/docs/rules/#flake8-2020-ytt
]
lint.ignore = [
    "D1",    # TODO: Missing docstrings for each type of object.
    "D200",
    "D203",  # Permanent: 1 blank line required before class docstring. D211 overrides.
    "D205",  # TODO: 1 blank line required between summary line and description.
    "D212",  # Permanent: Multi-line docstring summary should start at the first line. D213 overrides.
    "D401",  # TODO: First line of docstring should be in imperative mood: "{first_line}"
    "D417",  # TODO: Missing argument description in the docstring for {definition}: {name}
    "E501",  # Line too long ({width} > {limit} characters).
    "S",     # flake8-bandit: Automated security testing built right into your workflow!
    "T100",  # Trace found: {name} used.
]

# Exclude a variety of commonly ignored directories.
exclude = [
    "*migrations/*",
]
line-length = 100

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.lint.isort]
combine-as-imports = true

known-first-party = []
known-local-folder = ["tests"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.mccabe]
max-complexity = 10
